--- a/simonSays.html
+++ b/simonSays.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simon Says Game</title>
+    <title>Simon Squid Game</title>
     <link rel="stylesheet" href="simonSays.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <button class="startBtn">START</button>
     </div>
     
-    <h1>Simon Says Game</h1>
+    <h1>Simon Squid Game</h1>
     <h2>Press any key to start the game</h2>
     <div id="scores">
         <h3>High Score: <span>0</span></h3>
