--- a/simonSays.html
+++ b/simonSays.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Squid Game</title>
-    <link rel="stylesheet" href="simonSays.css">
+    <link rel="stylesheet" href="SimonSquid.css">
 </head>
 <body>
     <div class="overlay">
@@ -27,6 +27,6 @@
             <div class="btn green" type="button" id="green"></div>
         </div>
     </div>
-    <script src="simonSays.js"></script>
+    <script src="SimonSquid.js"></script>
 </body>
 </html>
